# flowmode

./: .env  .env.example  .gitignore  FEATURES.md  README.md  UPDATER_SETUP.md  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: generate-signing-keys.sh  setup.sh
src/: App.vue  main.ts  router.ts  vite-env.d.ts
src-tauri/: Cargo.toml  signer.key.pub  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/layouts/: MainLayout.module.scss  MainLayout.vue
src/stores/: index.ts
src/styles/: main.scss  variables.scss
src/types/: index.ts
src/views/: AboutView.module.scss  AboutView.vue  CalendarView.module.scss  CalendarView.vue  DiaryView.module.scss  DiaryView.vue  HabitTrackerView.module.scss  HabitTrackerView.vue  HomePage.module.scss  HomePage.vue  ListView.module.scss  ListView.vue  MasterPasswordView.module.scss  MasterPasswordView.vue  MoodTrackerView.module.scss  MoodTrackerView.vue  NotesView.module.scss  NotesView.vue  OverviewView.module.scss  OverviewView.vue  SettingsView.module.scss  SettingsView.vue  StatisticsView.module.scss  StatisticsView.vue
